2006-11-15  Jean-Christophe Baillie  <baillie@gostai.com>

	remove unnecessary parenthesis in tests. 
	* src/uvariable.cc: done.

2006-11-15  Jean-Christophe Baillie  <baillie@gostai.com>

	fix unnecessary high level scoping in variables 
	* src/uobj.cc: fix scoping.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	*.h -> *.hh
	* src/memorymanager/blockmemorymanager.h: Rename as...
	* src/memorymanager/blockmemorymanager.hh: this.
	* src/memorymanager/memorymanager.h: Rename as...
	* src/memorymanager/memorymanager.hh: this.
	* src/parser/uparser.h: Rename as...
	* src/parser/uparser.hh: this.
	* src/uasynccommand.h: Rename as...
	* src/uasynccommand.hh: this.
	* src/uasyncregister.h: Rename as...
	* src/uasyncregister.hh: this.
	* src/uatcandidate.h: Rename as...
	* src/uatcandidate.hh: this.
	* src/ubinary.h: Rename as...
	* src/ubinary.hh: this.
	* src/ubinder.h: Rename as...
	* src/ubinder.hh: this.
	* src/ucallid.h: Rename as...
	* src/ucallid.hh: this.
	* src/ucommand.h: Rename as...
	* src/ucommand.hh: this.
	* src/ucommandqueue.h: Rename as...
	* src/ucommandqueue.hh: this.
	* src/uconnection.h: Rename as...
	* src/uconnection.hh: this.
	* src/ueventcompound.h: Rename as...
	* src/ueventcompound.hh: this.
	* src/ueventhandler.h: Rename as...
	* src/ueventhandler.hh: this.
	* src/ueventinstance.h: Rename as...
	* src/ueventinstance.hh: this.
	* src/ueventmatch.h: Rename as...
	* src/ueventmatch.hh: this.
	* src/uexpression.h: Rename as...
	* src/uexpression.hh: this.
	* src/ufunction.h: Rename as...
	* src/ufunction.hh: this.
	* src/ughostconnection.h: Rename as...
	* src/ughostconnection.hh: this.
	* src/ugroup.h: Rename as...
	* src/ugroup.hh: this.
	* src/unamedparameters.h: Rename as...
	* src/unamedparameters.hh: this.
	* src/uobj.h: Rename as...
	* src/uobj.hh: this.
	* src/uproperty.h: Rename as...
	* src/uproperty.hh: this.
	* src/uqueue.h: Rename as...
	* src/uqueue.hh: this.
	* src/userver.h: Rename as...
	* src/userver.hh: this.